--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoContrato.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoContrato.xhtml
@@ -13,11 +13,9 @@
                 <h:form id="form"> 
                     <p:panel  id="PanelTotal" header="Historicos Tipos Contratos" style=" font-size: 12px; position: absolute; width: 685px; height: 530px;" >  
 
-                        <h:outputText style="position: absolute; width: 450px; left: 90px; height: 22px; top: 50px; font-size: 12px; font-family: Arial, Helvetica, sans-serif; text-align: justify;" value="Ingrese el tipo de contrato, el motivo del contrato, nombre del contrato, y la duracion del periodo de prueba." id="info"/>
-                        <p:commandButton id="btn" value=" " style="position: absolute; left: 25px; top: 70px; background-image: url(Imagenes/tipocontrato.gif); width:50px ;height:50px; background-repeat: no-repeat; background-size: 100% 100%;  "/>
-                        <h:outputText style="position: absolute; left: 90px; top: 100px; width: 200px; height: 12px;position: absolute; " id="nombreEmpleado" value="#{controlVigenciasTiposContratos.empleado.persona.nombreCompleto}"/>  
+                        <h:outputText style="position: absolute; left: 390px; top: 50px; position: absolute; color: red; font-weight: bold; width: 285px; text-align: right; " id="nombreEmpleado" value="#{controlVigenciasTiposContratos.empleado.persona.nombreCompleto}"/>
 
-                        <p:toolbar style="font-size: 12px; position: absolute; top: 100px; left: 315px;">  
+                        <p:toolbar style="font-size: 12px; position: absolute; top: 40px; left: 20px;">  
                             <p:toolbarGroup align="left"> 
 
                                 <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlVigenciasTiposContratos.guardarCambiosVTC()}" process="@this" />
@@ -62,12 +60,12 @@
                             </p:toolbarGroup>  
                         </p:toolbar> 
 
-                        <fieldset style="position: absolute; left: 10px; top: 130px; font-size: 10px; width: 645px; height: 285px; border-radius: 10px; ">
+                        <fieldset style="position: absolute; left: 10px; top: 80px; font-size: 10px; width: 645px; height: 285px; border-radius: 10px; ">
                             <legend style="font-size: 14px; color: blue"><strong>Contratos del empleado</strong></legend>
                             <!-- TABLA EMPLVIGENCIACARGO -->
 
-                            <p:dataTable id="datosVTCEmpleado" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; width: 627px"                           
-                                         value="#{controlVigenciasTiposContratos.vigenciasTiposContratoEmpleado}" scrollable="true" scrollWidth="627" scrollHeight="150"
+                            <p:dataTable id="datosVTCEmpleado" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; width: 642px"                           
+                                         value="#{controlVigenciasTiposContratos.vigenciasTiposContratoEmpleado}" scrollable="true" scrollWidth="642" scrollHeight="150"
                                          filteredValue="#{controlVigenciasTiposContratos.filtrarVTC}" emptyMessage="No se encontrarón resultados para la búsqueda"
                                          editable="true" editMode="cell" paginator="true" rows="6"  
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
@@ -343,11 +341,9 @@
                             </p:commandButton>
                         </p:dialog>
 
-
-                        <p:commandButton style="position: absolute; left: 380px; top: 435px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="proceso" value="Proceso" actionListener="#{controlVigenciasTiposContratos.verProceso()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 530px; top: 435px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" onclick="confirmarGuardar.show();" update=":form:datosVTCEmpleado" process="@this" />
-                        <p:commandButton style="position: absolute; left: 596px; top: 435px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" actionListener="#{controlVigenciasTiposContratos.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 300px; top: 435px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" actionListener="#{controlVigenciasTiposContratos.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 522px; top: 385px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-check" id="ACEPTAR" value="Aceptar" onclick="confirmarGuardar.show();" update=":form:datosVTCEmpleado" process="@this" />
+                        <p:commandButton style="position: absolute; left: 15px; top: 385px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-refresh" id="REFRESCAR" value="Refrescar" actionListener="#{controlVigenciasTiposContratos.cancelarModificacion()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 605px; top: 385px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras" actionListener="#{controlVigenciasTiposContratos.salir()}" action="nomina" process="@this" />
 
                     </p:panel>
 
