--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -392,7 +392,7 @@
                                     <!-- Panel Reportes -->
 
                                     <fieldset style="height: 35px; width: 30px; display: block; position: absolute; border-radius: 5px; top: 420px; left: 466px;">
-                                        <p:commandButton id="ReportesLaborales" value="" style="position: absolute; background-image: url(Imagenes/reportesboton.gif); width: 35px; height: 32px; top: 7px; background-repeat: no-repeat; background-size: 100% 100%; left: 5px;" />
+                                        <p:commandButton id="ReportesLaborales" value="" style="position: absolute; background-image: url(Imagenes/reportesboton.gif); width: 35px; height: 32px; top: 7px; background-repeat: no-repeat; background-size: 100% 100%; left: 5px;" action="ReporteLaboral" />
                                         <p:tooltip style="font-size: 12px" for="ReportesLaborales">
                                             REPORTES LABORALES: Permite Generar Reportes<br/> Preestablecidos de datos laborales.
                                         </p:tooltip>
