--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaLocalizacion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaLocalizacion.xhtml
@@ -584,10 +584,10 @@
                         </p:dialog>
 
 
-                        <p:commandButton style="position: absolute; left: 560px; top: 530px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" onclick="confirmarGuardar.show();" update=":form:datosVJEmpleado" process="@this" />
-                        <p:commandButton style="position: absolute; left: 626px; top: 530px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" actionListener="#{controlVigenciaLocalizacion.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 400px; top: 530px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" actionListener="#{controlVigenciaLocalizacion.salir()}" action="nomina" process="@this" />
-                        <p:commandButton style="position: absolute; left: 200px; top: 530px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="ARCHIVOPLANO" value="Archivo Plano" process="@this" />
+                        <p:commandButton style="position: absolute; left: 510px; top: 527px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosVJEmpleado" process="@this" />
+                        <p:commandButton style="position: absolute; left: 200px; top: 527px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlVigenciaLocalizacion.cancelarModificacion()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 626px; top: 527px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w"  actionListener="#{controlVigenciaLocalizacion.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 20px; top: 527px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ARCHIVOPLANO" value="Archivo Plano Prorrateos" process="@this" />
 
                     </p:panel>
 
