--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaReformaLaboral.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaReformaLaboral.xhtml
@@ -147,9 +147,9 @@
                             </p:commandButton>
                         </p:dialog> 
 
-                        <p:commandButton style="position: absolute; left: 530px; top: 415px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" onclick="confirmarGuardar.show();" update=":form:datosVRLEmpleado" process="@this" />
-                        <p:commandButton style="position: absolute; left: 596px; top: 415px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" actionListener="#{controlVigenciasReformasLaborales.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 300px; top: 415px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" actionListener="#{controlVigenciasReformasLaborales.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 500px; top: 412px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" icon="ui-icon-check" value="Aceptar" onclick="confirmarGuardar.show();" update=":form:datosVRLEmpleado" process="@this" />
+                        <p:commandButton style="position: absolute; left: 30px; top: 412px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlVigenciasReformasLaborales.cancelarModificacion()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 596px; top: 412px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlVigenciasReformasLaborales.salir()}" action="nomina" process="@this" />
 
                     </p:panel>
 
