--- a/DesignerRHN/DesignerRHN-war/web/EmpleadoIndividual.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmpleadoIndividual.xhtml
@@ -17,7 +17,7 @@
                         <fieldset style="position: absolute; left: 10px; top: 65px; font-size: 11px; width: 645px; height: 195px; border-radius: 10px; ">
                             <legend style="font-size: 12px; color: blue"><strong>Datos personales</strong></legend>
 
-                            <p:commandButton id="btnFoto" value="" style="background-image: url(Imagenes/copia.gif); background-size: 100% 100%; background-repeat: no-repeat; width: 90px; height: 100px " process="@this"/>
+                            <p:commandButton id="btnFoto" value="" style="background-image: url(Imagenes/tierno!.gif); background-size: 100% 100%; background-repeat: no-repeat; width: 90px; height: 100px " process="@this"/>
                             
                             <h:outputText value="Apellidos y Nombres" style="position: absolute; left: 105px; font-weight: bold; color: #14388B" />
                             <p:inputText id="primerApellido" value="#{controlEmpleadoIndividual.empleado.persona.primerapellido}" style="position: absolute; left: 223px; top: 11px; width: 100px"/>
@@ -168,7 +168,7 @@
 
                                 <p:commandButton id="btnEducacion" value="" style="background-image: url(Imagenes/niveleducativo.gif); background-size: 100% 100%; background-repeat: no-repeat; width: 35px; height: 38px; position: absolute " process="@this"/>
                                 <h:outputText value="Educación" style="position: absolute; left: 47px; font-weight: bold; color: #14388B;" />
-                                <p:inputText id="educacion" style="position: absolute; left: 45px; top: 30px; width: 90px"/>
+                                <p:inputText id="educacion" value="#{controlEmpleadoIndividual.educacionP}" style="position: absolute; left: 45px; top: 30px; width: 90px"/>
 
                                 <p:commandButton id="btnIdiomas" value="" style="background-image: url(Imagenes/idioma.gif); background-size: 100% 100%; background-repeat: no-repeat; width: 35px; height: 38px; position: absolute; top: 60px; " process="@this"/>
                                 <h:outputText value="Idiomas" style="position: absolute; left: 47px; font-weight: bold; color: #14388B; top: 60px" />
